--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,36 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="{% static 'css/home.css' %}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    </head>
-    <body>
+{% extends "store/base.html" %} {% block content %}
+    {% load static %}
         <div class="index">
             <div class="div">
-                <div class="navbar">
-                    <div class="navbar-2">
-                        <img src="logo1.png">
-                        <div class="home"><a href="index.html">HOME</a></div>
-                        <div class="shop"><a href="#">SHOP</a></div>
-                        <div class="about"><a href="#">ABOUT</a></div>
-                        <div class="contact"><a href="#">CONTACT</a></div>
-                        <div class="icons">
-                            <a href="#"><span class="material-symbols-outlined">
-                                account_circle
-                                </span></a>
-                            
-                            <a href="#"><span class="material-symbols-outlined">
-                                shopping_cart_checkout
-                                </span></a>
-            
-                            <a href="#"><span class="material-symbols-outlined">
-                                login
-                                </span></a>
-                        </div> 
-                    </div>
-                </div>
+                
                 <div class="hero">
                     <div class="overlap">
                         <div class="overlap-group">
@@ -61,40 +33,26 @@
                     <div class="text-wrapper-9">Coming soon</div>
                     <div class="laptop-sleeves">LAPTOP SLEEVES</div>
                 </div>
-                <div class="footer">
-                    <img class="social" src="facebook.png"/>
-                    <div class="social-2"></div>
-                    <img class="img" src="youtube.png"/>
-                    <div class="social-3"></div>
-                    <div class="menu-footer">
-                        <div class="text-wrapper-10">Product</div>
-                        <div class="text-wrapper-11">Landing Page</div>
-                        <div class="text-wrapper-12">Popup Builder</div>
-                        <div class="text-wrapper-13">Web-design</div>
-                        <div class="text-wrapper-14">Content</div>
-                        <div class="text-wrapper-15">Integrations</div>
+                <footer>
+                    <div class="footer-content">
+                        <!-- <h3>code opacity</h3> -->
+                        <img src="/static/images/footer_logo.png">
+                        <ul class="links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Conatct Us</a></li>
+                        </ul>
+                        <ul class="socials">
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        </ul>
                     </div>
-                    <div class="menu-footer-vert">
-                        <div class="text-wrapper-10">Use Cases</div>
-                        <div class="text-wrapper-11">Web-designers</div>
-                        <div class="text-wrapper-12">Marketers</div>
-                        <div class="text-wrapper-13">Small Business</div>
-                        <div class="text-wrapper-14">Website Builder</div>
+                    <div class="footer-bottom">
+                        <p>Copyright &copy;2024 On1yOne. Designed by <span>Team X</span></p>
                     </div>
-                    <div class="menu-footer-2">
-                        <div class="text-wrapper-10">Company</div>
-                        <div class="text-wrapper-11">About Us</div>
-                        <div class="text-wrapper-12">Careers</div>
-                        <div class="text-wrapper-13">FAQs</div>
-                        <div class="text-wrapper-14">Teams</div>
-                        <div class="text-wrapper-15">Contact Us</div>
-                    </div>
-                    <div class="overlap-2">
-                        <p class="p">High level experience in web design and development knowledge, producing quality work.</p>
-                        <img class="one-logo" src="logo.png" />
-                    </div>
-                </div>
+                </footer>
             </div>
         </div>
-    </body>
-</html>
+        <script src="https://kit.fontawesome.com/cfad7afb5a.js" crossorigin="anonymous"></script>
+{% endblock %}
