--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-{% load static %}
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="{% static 'css/login1.css' %}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    </head>
-    <body>
+{% extends "store/base.html" %} {% block content %}
+    {% load static %}
         <div class="login">
             <div class="div">
                 <div class="navbar">
                     <div class="navbar-2">
-                        <img src="logo1.png">
+                        <img src="{% static 'images1/On1yOne-White.png' %}">
                     </div>
                 <div class="group">
                     <div class="text-wrapper">Login</div>
@@ -24,45 +17,11 @@
                                 
                                 <label for="password">Password:</label><br>
                                 <input type="password" id="password" name="password" required><br><br>
-                    
-                                <input type="submit" value="Login">
                             </form>
                         </div>
-                        <button class="button" style="vertical-align:middle"><span>Login </span></button>
+                        <button type="submit" class="button" style="vertical-align:middle" value="Login"><span>Login </span></button>
                     </div>
                 </div>
-                <div class="footer">
-                    <img class="social" src="facebook.png"/>
-                    <div class="social-2"></div>
-                    <img class="img" src="youtube.png"/>
-                    <div class="social-3"></div>
-                    <div class="menu-footer">
-                        <div class="text-wrapper-4">Product</div>
-                        <div class="text-wrapper-5">Landing Page</div>
-                        <div class="text-wrapper-6">Popup Builder</div>
-                        <div class="text-wrapper-7">Web-design</div>
-                        <div class="text-wrapper-8">Content</div>
-                        <div class="text-wrapper-9">Integrations</div>
-                    </div>
-                    <div class="menu-footer-vert">
-                        <div class="text-wrapper-4">Use Cases</div>
-                        <div class="text-wrapper-5">Web-designers</div>
-                        <div class="text-wrapper-6">Marketers</div>
-                        <div class="text-wrapper-7">Small Business</div>
-                        <div class="text-wrapper-8">Website Builder</div>
-                    </div>
-                    <div class="menu-footer-2">
-                        <div class="text-wrapper-4">Company</div>
-                        <div class="text-wrapper-5">About Us</div>
-                        <div class="text-wrapper-6">Careers</div>
-                        <div class="text-wrapper-7">FAQs</div>
-                        <div class="text-wrapper-8">Teams</div>
-                        <div class="text-wrapper-9">Contact Us</div>
-                    </div>
-                    <div class="overlap">
-                        <p class="p">High level experience in web design and development knowledge, producing quality work.</p>
-                        <img class="one-logo" src="logo.png"/>
-                    </div>
                 </div>
             </div>
         </div>
@@ -73,5 +32,4 @@
             {% endif %}
             {% endfor %}
         </div>
-    </body>
-</html>
+{% endblock %}
