--- a/store/templates/store/signup.html
+++ b/store/templates/store/signup.html
@@ -1,17 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    </head>
-    <body>
-        <div class="login">
+{% extends "store/base.html" %} {% block content %}
+    {% load static %}
+        <div class="signup">
             <div class="div">
                 <div class="navbar">
                     <div class="navbar-2">
-                        <img src="logo1.png">
+                        <img src="/static/images/logo1.png">
                     </div>
                 </div>
                 <div class="group">
@@ -37,43 +30,8 @@
                                 
                                 <label for="password2">Confirm Password:</label><br>
                                 <input type="password" id="password2" name="password2" required><br><br>
-                    
-                                <input type="submit" value="Register">
                             </form>
-                        <button class="button" style="vertical-align:middle"><span>Login </span></button>
-                    </div>
-                </div>
-                <div class="footer">
-                    <img class="social" src="facebook.png" />
-                    <div class="social-2"></div>
-                    <img class="img" src="youtube.png" />
-                    <div class="social-3"></div>
-                    <div class="menu-footer">
-                        <div class="text-wrapper-5">Product</div>
-                        <div class="text-wrapper-6">Landing Page</div>
-                        <div class="text-wrapper-7">Popup Builder</div>
-                        <div class="text-wrapper-8">Web-design</div>
-                        <div class="text-wrapper-9">Content</div>
-                        <div class="text-wrapper-10">Integrations</div>
-                    </div>
-                    <div class="menu-footer-vert">
-                        <div class="text-wrapper-5">Use Cases</div>
-                        <div class="text-wrapper-6">Web-designers</div>
-                        <div class="text-wrapper-7">Marketers</div>
-                        <div class="text-wrapper-8">Small Business</div>
-                        <div class="text-wrapper-9">Website Builder</div>
-                    </div>
-                    <div class="menu-footer-2">
-                        <div class="text-wrapper-5">Company</div>
-                        <div class="text-wrapper-6">About Us</div>
-                        <div class="text-wrapper-7">Careers</div>
-                        <div class="text-wrapper-8">FAQs</div>
-                        <div class="text-wrapper-9">Teams</div>
-                        <div class="text-wrapper-10">Contact Us</div>
-                    </div>
-                    <div class="overlap">
-                        <p class="p">High level experience in web design and development knowledge, producing quality work.</p>
-                        <img class="one-logo" src="logo.png" />
+                        <button class="button" type="submit" value="Register" style="vertical-align:middle"><span>Sign Up </span></button>
                     </div>
                 </div>
             </div>
@@ -85,5 +43,4 @@
         {% endif %}
         {% endfor %}
         </div>
-    </body>
-</html>
+{% endblock %}
