rebased the whole code and shifted to tailwind tshirt and hoodie store, cart, base

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,58 +1,61 @@
 {% extends "store/base.html" %} {% block content %}
     {% load static %}
-        <div class="index">
-            <div class="div">
-                
-                <div class="hero">
-                    <div class="overlap">
-                        <div class="overlap-group">
-                            <p class="super-value-deals-on">Super Value deals <br />On all Products</p>
-                            <p class="save-more-with">Save more with coupons &amp; up to 70% off!</p>
-                        </div>
-                        <button class="button-85" role="button">Shop Now</button>
-                    </div>
-                </div>
-                <div class="cards-section">
-                    <div class="group">
-                        <div class="overlap-group-2">
-                            <div class="text-wrapper-2">T-Shirts</div>
-                            <div class="text-wrapper-3">starting at Rs 1,500/-</div>
-                            <button class="button-85" id="shopButton" role="button">Shop Now</button>
-                        </div>
-                    </div>
-                    <div class="overlap-wrapper">
-                        <div class="overlap-group-2">
-                            <button class="button-85" id="shopButton" role="button">Shop Now</button>
-                            <div class="text-wrapper-6">starting at Rs 3,500/-</div>
-                            <div class="text-wrapper-7">Hoodies</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="coming-soon">
-                    <button class="overlap-group-wrapper">Get Notified</button>
-                    <div class="text-wrapper-9">Coming soon</div>
-                    <div class="laptop-sleeves">LAPTOP SLEEVES</div>
-                </div>
-                <footer>
-                    <div class="footer-content">
-                        <!-- <h3>code opacity</h3> -->
-                        <img src="/static/images/footer_logo.png">
-                        <ul class="links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Conatct Us</a></li>
-                        </ul>
-                        <ul class="socials">
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-bottom">
-                        <p>Copyright &copy;2024 On1yOne. Designed by <span>Team X</span></p>
-                    </div>
-                </footer>
-            </div>
-        </div>
-        <script src="https://kit.fontawesome.com/cfad7afb5a.js" crossorigin="anonymous"></script>
+    <div class="py-6 px-24">
+        <div class="relative bg-base-300 w-full h-1/2"></div>
+    </div>
+    {#        <div class="index">#}
+    {#            <div class="div">#}
+    {##}
+    {#                <div class="hero">#}
+    {#                    <div class="overlap">#}
+    {#                        <div class="overlap-group">#}
+    {#                            <p class="super-value-deals-on">Super Value deals <br />On all Products</p>#}
+    {#                            <p class="save-more-with">Save more with coupons &amp; up to 70% off!</p>#}
+    {#                        </div>#}
+    {#                        <button class="button-85" role="button">Shop Now</button>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="cards-section">#}
+    {#                    <div class="group">#}
+    {#                        <div class="overlap-group-2">#}
+    {#                            <div class="text-wrapper-2">T-Shirts</div>#}
+    {#                            <div class="text-wrapper-3">starting at Rs 1,500/-</div>#}
+    {#                            <button class="button-85" id="shopButton" role="button">Shop Now</button>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="overlap-wrapper">#}
+    {#                        <div class="overlap-group-2">#}
+    {#                            <button class="button-85" id="shopButton" role="button">Shop Now</button>#}
+    {#                            <div class="text-wrapper-6">starting at Rs 3,500/-</div>#}
+    {#                            <div class="text-wrapper-7">Hoodies</div>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="coming-soon">#}
+    {#                    <button class="overlap-group-wrapper">Get Notified</button>#}
+    {#                    <div class="text-wrapper-9">Coming soon</div>#}
+    {#                    <div class="laptop-sleeves">LAPTOP SLEEVES</div>#}
+    {#                </div>#}
+    {#                <footer>#}
+    {#                    <div class="footer-content">#}
+    {#                        <!-- <h3>code opacity</h3> -->#}
+    {#                        <img src="/static/images/footer_logo.png">#}
+    {#                        <ul class="links">#}
+    {#                            <li><a href="#">Home</a></li>#}
+    {#                            <li><a href="#">About Us</a></li>#}
+    {#                            <li><a href="#">FAQs</a></li>#}
+    {#                            <li><a href="#">Conatct Us</a></li>#}
+    {#                        </ul>#}
+    {#                        <ul class="socials">#}
+    {#                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>#}
+    {#                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>#}
+    {#                        </ul>#}
+    {#                    </div>#}
+    {#                    <div class="footer-bottom">#}
+    {#                        <p>Copyright &copy;2024 On1yOne. Designed by <span>Team X</span></p>#}
+    {#                    </div>#}
+    {#                </footer>#}
+    {#            </div>#}
+    {#        </div>#}
+    <script src="https://kit.fontawesome.com/cfad7afb5a.js" crossorigin="anonymous"></script>
 {% endblock %}
