--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -1,77 +1,66 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="emerald">
 
 <head>
-{#    {% block head %} {% endblock %}#}
-
+    {#    {% block head %} {% endblock %}#}
+    <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-{#    <script src="https://cdn.tailwindcss.com"></script>#}
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdn.tailwindcss.com"></script>
 
 
 </head>
 
-<body>
+<body class="h-screen">
+<div>
+    <div class="navbar bg-green-300 text-white px-12">
+        <div class="navbar-start">
+            <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                         stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M4 6h16M4 12h8m-8 6h16"/>
+                    </svg>
+                </div>
+                <ul tabindex="0"
+                    class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-green-300 rounded-box w-52">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="{% url 't-shirt' %}">T-Shirt</a></li>
 
+                    <li><a href="{% url 'hoodie' %}">Hoodie</a></li>
+                </ul>
+            </div>
+            <a class="btn btn-ghost text-xl">On1y One</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+                <li><a href="/">Home</a></li>
+                <li><a href="{% url 't-shirt' %}">TShirt</a></li>
 
-    <div class="navbar">
-        <div class="navbar-2">
-            <img src="{% static 'images1/On1yOne-White.png' %}" class="one-logo-1">
-            <a href="/">
-                <button class="home">Home</button>
-            </a>
-            <a href="{% url 't-shirt' %}">
-                <button class="shop">T_shirt</button>
-            </a>
-            <a href="{% url 'hoodie' %}">
-                <button class="about">Hoodie</button>
-            </a>
-            {#<button class="contact">CONTACT</button>#}
-            <a href="{% url 'cart' %}">
-                <button class="cart"><i class="fa fa-shopping-cart"></i></button>
-            </a>
+                <li><a href="{% url 'hoodie' %}">Hoodie</a></li>
+            </ul>
+        </div>
+        <div class="navbar-end">
+            <a href="/cart">
+            <button class="btn btn-ghost btn-circle">
+
+                <svg xmlns="http://www.w3.org/2000/svg"  class="h-7 w-7 fill-white" viewBox="0 0 35 35" id="cart"><path d="M27.47,23.93H14.92A5.09,5.09,0,0,1,10,20L8,11.87a5.11,5.11,0,0,1,5-6.32h16.5a5.11,5.11,0,0,1,5,6.32l-2,8.15A5.1,5.1,0,0,1,27.47,23.93ZM12.94,8.05a2.62,2.62,0,0,0-2.54,3.23l2,8.15a2.6,2.6,0,0,0,2.54,2H27.47a2.6,2.6,0,0,0,2.54-2l2-8.15a2.61,2.61,0,0,0-2.54-3.23Z"></path><path d="M9.46 14a1.25 1.25 0 0 1-1.21-1L6.46 5.23A3.21 3.21 0 0 0 3.32 2.75H1.69a1.25 1.25 0 0 1 0-2.5H3.32A5.71 5.71 0 0 1 8.9 4.66l1.78 7.77a1.24 1.24 0 0 1-.93 1.5A1.43 1.43 0 0 1 9.46 14zM15.11 34.75a4 4 0 1 1 4-4A4 4 0 0 1 15.11 34.75zm0-5.54a1.52 1.52 0 1 0 1.52 1.52A1.52 1.52 0 0 0 15.11 29.21zM28.93 34.75a4 4 0 1 1 4-4A4 4 0 0 1 28.93 34.75zm0-5.54a1.52 1.52 0 1 0 1.53 1.52A1.52 1.52 0 0 0 28.93 29.21z"></path><path d="M28.93,29.21H12.27a3.89,3.89,0,1,1,0-7.78h2.65a1.25,1.25,0,1,1,0,2.5H12.27a1.39,1.39,0,1,0,0,2.78H28.93a1.25,1.25,0,0,1,0,2.5Z"></path></svg>
+    </button></a>
         </div>
     </div>
+</div>
 
-{#<nav class="nav flex flex-wrap items-center justify-between py-4 px-2 ">#}
-{#    <div class="flex flex-no-shrink items-center mr-6  text-gray-500">#}
-{#      <span class=" text-xl tracking-tight font-bold">EzML</span>#}
-{#    </div>#}
-{##}
-{#    <input class="menu-btn hidden" type="checkbox" id="menu-btn">#}
-{#    <label class="menu-icon block cursor-pointer md:hidden px-2 py-4 relative select-none" for="menu-btn">#}
-{#      <span class="navicon bg-grey-darkest flex items-center relative"></span>#}
-{#    </label>#}
-{##}
-{#    <ul class="menu border-b md:border-none flex justify-end list-reset m-0 w-full md:w-auto">#}
-{#      <li class="border-t md:border-none">#}
-{#        <a href="/" class="block md:inline-block px-3 py-3 no-underline text-gray-200 hover:text-purple-300">Home</a>#}
-{#      </li>#}
-{#      <li class="border-t md:border-none">#}
-{#        <a href="#abt" class="block md:inline-block px-3 py-3 no-underline text-gray-200 hover:text-purple-300">About#}
-{#          the app</a>#}
-{#      </li>#}
-{#      <li class="border-t md:border-none">#}
-{#        <a href="#feat"#}
-{#          class="block md:inline-block px-3 py-3 no-underline text-gray-200 hover:text-purple-300">Features</a>#}
-{#      </li>#}
-{#      <li class="border-t md:border-none">#}
-{#        <a href="#pricing"#}
-{#          class="block md:inline-block px-3 py-3 no-underline text-gray-200 hover:text-purple-300">Pricing</a>#}
-{#      </li>#}
-{##}
-{#    </ul>#}
-{##}
-{#  </nav>#}
 {% block content %} {% endblock %}
 
 
