--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,136 +1,136 @@
 {% extends "store/base.html" %} {% block content %}
-{% load static %}
-
-<div class="checkout-page">
-    <div class="div">
-        <div class="text-wrapper">Bag</div>
-        <div class="text-wrapper-2">Summary</div>
-        <h3>Items:{{order.get_cart_items}}</h3>
-        <div class="scroll">
+    {% load static %}
+    <h1 class="text-9xl font-bold text-center p-12" xmlns="http://www.w3.org/1999/html">Your Cart</h1>
+    <div class="flex flex-col w-full lg:flex-row">
+        <div class="grid flex-grow  place-items-center">
             {% for item in items %}
-            <div class="product-container">
-                <img class="rectangle" src="{{ item.product.imageURL }}" alt="">
-                <div class="p">{{ item.product.name }}</div>
-                <br>
-                <div>Price: ₹{{ item.product.price }}</div>
-                <img src="{{ item.product.designURL }}" alt="">
-                <!-- <div>{{ item.product.id }}</div> -->
-                <div class="text-wrapper-5">Size: {{ item.product.size }}</div>
-                <button data-product="{{item.product.id}}" data-action="remove" class="update-cart">Remove</button>
-            </div>
+                <div class="card bg-base-100 shadow-xl my-12">
+                    <figure>
+                        <img src="{{ item.product.designURL }}" alt="product" class="p-12"/>
+
+                        <img src="{{ item.product.imageURL }}" alt="product"/>
+                    </figure>
+                    <div class="card-body ">
+                        <div class="flex flex-row justify-around">
+                            <div>
+                                <p>₹{{ item.product.price }}</p>
+
+
+                            </div>
+                            <div>
+                                <h2 class="card-title capitalize">{{ item.product.name }}</h2>
+
+                            </div>
+                            <div>
+                                <p>{{ item.product.size }}</p>
+
+
+                            </div>
+                        </div>
+                        <div class="card-actions justify-end py-6">
+                            <button class="btn btn-outline btn-accent update-cart" data-product="{{ item.product.id }}"
+                                    data-action="remove">Remove
+                            </button>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
         </div>
+        <div class="grid flex-grow h-1/2 rounded-box place-items-left ">
+            <div class="w-1/3">
+                <h1 class="text-7xl text-center">Summary </h1>
+                <div class="flex flex-col p-6 h-full">
+                    <div class="flex justify-between ">
+                        <h2 class="align-left">Subtotal</h2>
+                        <h2>₹{{ order.get_cart_total }}</h2>
+                    </div>
+                    <div class="flex justify-between ">
+                        <h2 class="align-left">Estimated Delivery &amp; Handling</h2>
+                        <h2>₹ 1000.00</h2>
+                    </div>
+                    <div class="flex justify-between py-10">
+                        <h2 class="align-left">Total</h2>
+                        <h2>₹ {{ order.get_cart_total | add:1000 }}</h2>
+                    </div>
+                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg w-full bg-green-300 text-white">Checkout
+                    </button>
 
-        <div class="text-wrapper-3">Subtotal</div>
-        <div class="estimated-delivery">Estimated Delivery &amp; Handling</div>
-        <div class="line-2"></div>
-        <!-- <div class="text-wrapper-4">Hoodie</div>
-        <div class="text-wrapper-6">Quantity : 1</div> -->
-        <div class="line-1"></div>
-        <div class="text-wrapper-7">₹ {{order.get_cart_total}}</div>
-        <div class="text-wrapper-8">₹ 1000.00</div>
-        <div class="group">
-            <div class="text-wrapper-9">Total</div>
-            <div class="text-wrapper-10">₹ {{ order.get_cart_total | add:1000 }}</div>
-        </div>
-        <div class="line-3"></div>
-        <div class="frame">
-            <div class="div-wrapper"><div class="text-wrapper-11">Guest Checkout</div></div>
-            <div class="frame-2"><button class="text-wrapper-11" onclick="location.href = '/checkout'">Member Checkout</button></div>
-        </div>
-        <div class="footer">
-            <img class="social-1" src="facebooklogo.jpeg" />
-            <img class="social-2" src="instagramlogo.jpeg" />
-            <img class="social-3" src="youtubelogo.jpeg" />
-            <img class="social-4" src="linkdinlogo.jpeg" />
-            <div class="menu-footer">
-                <div class="text-wrapper-12">Product</div>
-                <div class="text-wrapper-13">Landing Page</div>
-                <div class="text-wrapper-14">Popup Builder</div>
-                <div class="text-wrapper-15">Web-design</div>
-                <div class="text-wrapper-16">Content</div>
-                <div class="text-wrapper-17">Integrations</div>
-            </div>
-            <div class="menu-footer-vert">
-                <div class="text-wrapper-12">Use Cases</div>
-                <div class="text-wrapper-13">Web-designers</div>
-                <div class="text-wrapper-14">Marketers</div>
-                <div class="text-wrapper-15">Small Business</div>
-                <div class="text-wrapper-16">Website Builder</div>
-            </div>
-            <div class="menu-footer-2">
-                <div class="text-wrapper-12">Company</div>
-                <div class="text-wrapper-13">About Us</div>
-                <div class="text-wrapper-14">Careers</div>
-                <div class="text-wrapper-15">FAQs</div>
-                <div class="text-wrapper-16">Teams</div>
-                <div class="text-wrapper-17">Contact Us</div>
-            </div>
-            <div class="overlap">
-                <p class="text-wrapper-18">
-                    High level experience in web design and development knowledge, producing quality work.
-                </p>
-                <img class="one-logo" src="on1y One logo .png" />
+                </div>
             </div>
         </div>
+
     </div>
-</div>
+    </div>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-    var removeButtons = document.querySelectorAll('.update-cart');
+<footer class="footer  items-center p-4 bg-green-300 text-neutral-content">
+  <aside class="items-center grid-flow-col">
+    <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
+    <p>Copyright © 2024 - All right reserved</p>
+  </aside>
+  <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>
+    </a>
+    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+  </nav>
+</footer>
 
-    removeButtons.forEach(function(button) {
-        button.addEventListener('click', function() {
-            var productId = button.getAttribute('data-product');
-            var action = button.getAttribute('data-action');
 
-            // Construct the data payload
-            var data = {
-                'product_id': productId,
-                'action': action
-            };
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var removeButtons = document.querySelectorAll('.update-cart');
 
-            // Send an AJAX request to update the cart
-            fetch('/update-cart/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': getCookie('csrftoken')
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                // Handle the response from the server
-                console.log(data);
-                // Refresh the page upon successful removal
-                location.reload();
-            })
-            .catch((error) => {
-                console.error('Error:', error);
+            removeButtons.forEach(function (button) {
+                button.addEventListener('click', function () {
+                    var productId = button.getAttribute('data-product');
+                    var action = button.getAttribute('data-action');
+
+                    // Construct the data payload
+                    var data = {
+                        'product_id': productId,
+                        'action': action
+                    };
+
+                    // Send an AJAX request to update the cart
+                    fetch('/update-cart/', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-CSRFToken': getCookie('csrftoken')
+                        },
+                        body: JSON.stringify(data)
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            // Handle the response from the server
+                            console.log(data);
+                            // Refresh the page upon successful removal
+                            location.reload();
+                        })
+                        .catch((error) => {
+                            console.error('Error:', error);
+                        });
+                });
             });
-        });
-    });
 
-    // Function to get CSRF token from cookies
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = cookies[i].trim();
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
+            // Function to get CSRF token from cookies
+            function getCookie(name) {
+                var cookieValue = null;
+                if (document.cookie && document.cookie !== '') {
+                    var cookies = document.cookie.split(';');
+                    for (var i = 0; i < cookies.length; i++) {
+                        var cookie = cookies[i].trim();
+                        if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                            break;
+                        }
+                    }
                 }
+                return cookieValue;
             }
-        }
-        return cookieValue;
-    }
-});
+        });
 
 
-</script>
+    </script>
 {% endblock %}
 
